--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,6 +20,7 @@ along with aRevelation.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <resources>
     <string name="tap_to_open">Tap to open file</string>
+    <string name="input_password">Input password:</string>
     <string name="name">Name</string>
     <string name="password">Password</string>
     <string name="host">Host</string>
